--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,7 @@ services:
         ports:
             - '3003:3003'
         mongodbB:
-            image: mongo
-        container_name: mongodb
+        image: mongo
+        ports:
+            - '27017:27017'
+        container_name: 'mongodb'
